tests/snapshots/sfc/ts/script_setup__props_with_nested_object_types.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    config: { type: Object, required: true },
  },
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.config.state), 1 /* TEXT */))
}
}

})
