tests/snapshots/sfc/ts/script_setup__props_with_readonly_arrays.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, renderList as _renderList, toDisplayString as _toDisplayString } from "vue"
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    options: { type: Object, required: true },
  },
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = {  }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("select", null, [
    (_openBlock(true), _createElementBlock(_Fragment, null, _renderList($props.options, (opt) => {
      return (_openBlock(), _createElementBlock("option", {
        key: opt.value,
        value: opt.value
      }, _toDisplayString(opt.label), 1 /* TEXT */))
    }), 128 /* KEYED_FRAGMENT */))
  ]))
}

__sfc__.render = render
export default __sfc__
