tests/snapshots/sfc/ts/script_setup__props_with_union_types.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


type ButtonVariant =
  | { type: "link"; href: string }
  | { type: "button"; onClick: () => void }


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    variant: { type: null as unknown as PropType<ButtonVariant>, required: true }
  },
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.variant.type), 1 /* TEXT */))
}
}

})
