tests/snapshots/sfc/ts/script_setup__reco_guidanceprogresslapinputbtn_pattern.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, normalizeClass as _normalizeClass, withModifiers as _withModifiers } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { computed } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const props = __props;
    const lapClass = computed(() => `lap-${props.guidanceProgress.progressLap}`);
    const isChangedProgressLap = computed(() => props.guidanceProgress.progressLap !== props.guidanceProgress.originalProgressLap);
    const __returned__ = {
      computed,
      disabled,
      guidanceProgress,
      isChangedProgressLap,
      lapClass,
      readonly
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", {
    class: _normalizeClass([{ $props.disabled }, $setup.lapClass]),
    disabled: $props.disabled,
    onClick: _withModifiers(() => {}, ["prevent"])
  }, "\n    " + _toDisplayString($props.guidanceProgress.progressUnit.value) + "\n  ", 11 /* TEXT, CLASS, PROPS */, ["disabled", "onClick"]))
}

__sfc__.render = render
export default __sfc__
