tests/snapshots/sfc/ts/script_setup__ref_binding.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const count = ref(0);
    const __returned__ = {
      count,
      ref
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($setup.count), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
